<resources>
    <string name="app_name">FitMedia</string>
    <string name="user_info">Usuário:</string>
    <string name="user_tip">Digite o seu usuário</string>
    <string name="password_info">Senha:</string>
    <string name="password_tip">Digite sua senha</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Cadastrar-se</string>
    <string name="name_info">Nome:</string>
    <string name="name_tip">Digite seu nome</string>
    <string name="email_info">Email:</string>
    <string name="email_tip">seuemail@email.com</string>
    <string name="txt_post">Post aqui;</string>
    <string name="edt_post">Digite aqui....</string>
    <string name="btn_post">Publicar</string>
    <string name="txt_sair">Sair</string>
    <string name="help">Ajuda</string>
    <string name="app_label">Camada Busca</string>
    <string name="search_hint">Dica Busca</string>
    <string name="search_title">Buscar</string>
    <string name="txt_follow">Nome da Pessoa</string>
    <string name="tip_follow">Seguir</string>
    <string name="title_activity_comment">CommentActivity</string>
</resources>
